# sdr-agent

./: .gitignore  README.md  env.example  pyproject.toml
src/sdr_agent/: __init__.py  app.py  config.py  manager.py  schemas.py
src/sdr_agent/agents/: __init__.py  delivery.py  email_agent.py  guardrails.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
src/sdr_agent/integrations/: __init__.py  openai_provider.py
src/sdr_agent/ui/: __init__.py
