[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr-agent"
version = "0.1.0"
description = "Skeleton for a multi-agent SDR assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Haben" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
